# cpp-project

./: CMakeLists.txt  README.md  vcpkg.json
cmake/vcpkg/: vcpkg.toolchain.cmake
src/: CMakeLists.txt
src/cli/: CMakeLists.txt
src/cli/src/: main.cpp
src/cmake/: add_p1_executable.cmake  add_p1_module.cmake  p1-config.cmake  p1-install-targets.cmake  set_p1_target_properties.cmake
src/m1/: CMakeLists.txt
src/m1/include/p1/m1/: h1.hpp
src/m1/src/: h1.cpp
tests/: CMakeLists.txt
tests/cmake/: add_p1_test.cmake
tests/m1/: CMakeLists.txt  h1_test.cpp
